--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
         </header>
 
-        
+
         <table id="calcu">
                 <tr>
                         <td colspan="3">
@@ -51,6 +51,9 @@
                         <td><input type="button" value="+"></td>
                 </tr>
         </table>
+        <footer>
+                <span>Made with ❤️ by Awadhesh</span>
+        </footer>
 </body>
 
 </html>
