--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                 </tr>
         </table>
         <footer>
+                <center>
                 <span>Made with ❤️ by Awadhesh</span>
+                </center>
         </footer>
 </body>
 
